# solaru

./: .editorconfig  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
api/: index.py
app/: globals.css  layout.tsx  page.tsx
lib/config/: index.ts
solaru/: __init__.py  test.py
